--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,27 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+.topNav {
+  display: flex;
+  justify-content: space-between;
+  padding: 25px 0;
+  border-bottom: 2px dashed #C0C0C0;
+}
+.topNav h1 {
+  width: 40%;
+}
+.topNav nav {
+  display: flex;
+  justify-content: space-around;
+  width: 35%;
+  align-items: center;
+}
+.topNav a {
+  font-size: 1.4em;
+  text-decoration: none;
+  color: black;
+  padding: 5px;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -184,6 +205,9 @@ img {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+.home .content-section header {
+  padding: 20px 0px;
 }
 .home .content-section .text-content {
   width: 48%;
