--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,23 @@
 // Navigation Styles here
+.topNav {
+  display: flex;
+  justify-content: @between;
+  padding: 25px 0;
+  border-bottom: 2px dashed #C0C0C0;
+    h1 {
+      width: 40%;
+    }
+    nav {
+      display: flex;
+      justify-content: @around;
+      width: 35%;
+      align-items: center;
+
+    }
+    a {
+      font-size: 1.4em;
+      text-decoration: none;
+      color: black;
+      padding: 5px;
+    }
+}
