--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,8 +6,10 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
+  header {
+    padding: 20px 0px;
+  };
+
     .text-content {
       width: 48%;
       padding-right: 1%;
