--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,9 +5,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
-  header {
+  }
+   .introP {
     padding: 20px 0px;
+    border-bottom: 2px dashed #C0C0C0;
   };
 
     .text-content {
@@ -23,7 +24,7 @@
         border-radius: 10px;
       }
     }
-  }
+
 
   .inverse-content {
     padding-bottom: 30px;
@@ -59,5 +60,13 @@
       width: 30%;
       margin-bottom: 30px;
     }
+  }
+  .btn {
+    padding: 12px 20px;
+    background-color: teal;
+    color: white;
+    text-align: center;
+    border-radius: 15px;
+    font-size: 2em;
   }
 }// home
