started mobile styling

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -20,4 +20,8 @@
       color: black;
       padding: 5px;
     }
+    @media @mobile {
+      display: flex;
+      flex-direction: column;
+    }
 }
