--- a/css/index.css
+++ b/css/index.css
@@ -189,6 +189,20 @@ img {
   color: black;
   padding: 5px;
 }
+@media (max-width: 500px) {
+  .topNav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .topNav h1 {
+    text-align: center;
+  }
+  .topNav nav {
+    width: 100%;
+    justify-content: space-around;
+  }
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
