--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,6 +5,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    @media @mobile {
+      
+    }
   }
    .introP {
     padding: 20px 0px;
