--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,16 +12,24 @@
       justify-content: @around;
       width: 35%;
       align-items: center;
-
     }
     a {
       font-size: 1.4em;
       text-decoration: none;
       color: black;
       padding: 5px;
-    }
+    };
+
     @media @mobile {
       display: flex;
       flex-direction: column;
+      align-items: center;
+      h1 {
+        text-align: center;
+      }
+      nav {
+        width: 100%;
+        justify-content: @around;
+      }
     }
 }
