--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,7 +6,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
     @media @mobile {
-      
+      flex-wrap: nowrap;
+      flex-direction: column;
+      align-items: center;
     }
   }
    .introP {
@@ -41,6 +43,9 @@
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+      @media @mobile {
+        order: 8;
+      }
     }
   }
 
