--- a/less/home-page.less
+++ b/less/home-page.less
@@ -12,19 +12,28 @@
     }
   }
    .introP {
-    padding: 20px 0px;
+    padding: 0px 0px 20px 0px;
     border-bottom: 2px dashed #C0C0C0;
+    margin: 0 5%;
+    img {
+      margin-bottom: 15px;
+    }
   };
 
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media @mobile {
+        width: 90%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
-
+      @media @mobile {
+        width: 90%;
+      }
       img {
         border-radius: 10px;
       }
@@ -38,6 +47,9 @@
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+      @media @mobile {
+        width: 90%;
+      }
     }
 
     .img-content {
@@ -45,6 +57,8 @@
       padding-left: 0;
       @media @mobile {
         order: 8;
+        display: block;
+        width: 90%
       }
     }
   }
@@ -52,9 +66,14 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
-
+    @media @mobile {
+      width: 90%;
+    }
     img {
       border-radius: 10px;
+      @media @mobile {
+        width: 90%;
+      }
     }
   }
 
@@ -63,10 +82,17 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    @media @mobile {
+      flex-direction: column;
+      align-items: center;
+    }
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      @media @mobile {
+        width: 80%;
+      }
     }
   }
   .btn {
