--- a/less/navigation.less
+++ b/less/navigation.less
@@ -24,8 +24,10 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      padding-bottom: 5px;
       h1 {
         text-align: center;
+        margin-bottom: 20px;
       }
       nav {
         width: 100%;
